--- a/js 1/index.html
+++ b/js 1/index.html
@@ -34,6 +34,6 @@
         </div>
         <!-- Footer -->
         <!-- Javascript -->
-        <script src="scripts/domManipulation.js"></script>
+        <script src="scripts/domManipulation2.js"></script>
     </body>
 </html>
