--- a/js 1/index.html
+++ b/js 1/index.html
@@ -24,7 +24,7 @@
                 <button>Let's Go!</button>
             </section>
             <section id="b">
-                <p>Paragraf 4</p>
+                <p class="p4">Paragraf 4</p>
                 <ul>
                     <li>Item 1</li>
                     <li>Item 2</li>
@@ -34,6 +34,6 @@
         </div>
         <!-- Footer -->
         <!-- Javascript -->
-        <script src="scripts/domManipulation2.js"></script>
+        <script src="scripts/domEvents.js"></script>
     </body>
 </html>
