--- a/js 1/index.html
+++ b/js 1/index.html
@@ -3,37 +3,12 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta name="description" content="" />
-        <meta name="keywords" content="" />
-        <meta http-equiv="X-UA-Compatible" content="IE=7" />
         <title>Document</title>
         <link rel="stylesheet" href="assets/style.css" />
     </head>
     <body>
-        <!-- Header -->
-        <!-- Main -->
-        <h1 id="judul">Hello World</h1>
-        <div id="container">
-            <section id="a">
-                <p class="p1">Paragraf 1</p>
-                <a href="http://instagram.com/sandhikagalih"
-                    >Instagram Sandhika Galih</a
-                >
-                <p class="p2">Paragraf 2</p>
-                <p class="p3">Paragraf 3</p>
-                <button>Let's Go!</button>
-            </section>
-            <section id="b">
-                <p class="p4">Paragraf 4</p>
-                <ul>
-                    <li>Item 1</li>
-                    <li>Item 2</li>
-                    <li>Item 3</li>
-                </ul>
-            </section>
-        </div>
-        <!-- Footer -->
-        <!-- Javascript -->
-        <script src="scripts/domEvents.js"></script>
+        <h1>Javascript</h1>
+        <div></div>
+        <script src="scripts/main.js"></script>
     </body>
 </html>
