--- a/js 1/higher order function/index.html
+++ b/js 1/higher order function/index.html
@@ -31,6 +31,6 @@
       </li>
     </ol>
 
-    <script src="scripts/higherOrder.js"></script>
+    <script src="higherOrder.js"></script>
   </body>
 </html>
